# tdsweb

./: CMakeLists.txt
src/: base64.h  tdsweb.cpp  win.cpp
web/: index.html  tdsweb.css  tdsweb.js
